--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 PORT=8747
 JWT_KEY="tov385uyt0857utn$^#^#09qut8uv464t35]u[]h#$^#%&%$"
-ORIGIN="https://66f3b5c6a70a27ddf2098b86--leafy-licorice-ac601f.netlify.app"
+ORIGIN="https://syncronous.netlify.app"
 DATABASE_URL="mongodb+srv://bajpaiatharva007:CSsikUkLHaT6NZAm@syncronous.iugdf.mongodb.net/chat-app"
