--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 PORT=8747
 JWT_KEY="tov385uyt0857utn$^#^#09qut8uv464t35]u[]h#$^#%&%$"
-ORIGIN="*"
+ORIGIN=*
 DATABASE_URL="mongodb+srv://bajpaiatharva007:CSsikUkLHaT6NZAm@syncronous.iugdf.mongodb.net/chat-app"
